--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "moneybags.react",
+  "author": "Andy Knight",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
-    "@types/react": "16.9.2",
+    "@types/react": "16.8.24",
     "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "^4.3.5",
+    "axios": "^0.19.0",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "typescript": "3.5.3"
   },
@@ -32,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.2"
   }
 }
