--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "typescript": "3.5.3"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.2"
+    "@types/react": "^16.9.2",
+    "tslint": "^5.19.0",
+    "typescript": "^3.5.3"
   }
 }
