--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@types/node": "12.7.2",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.9.0",
+    "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.5",
+    "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
