--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-router-dom": "^4.3.5",
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
+    "connected-react-router": "^6.5.2",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
