--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
+    "redux-observable": "^1.1.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
