--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
-    "@types/react": "16.8.24",
+    "@types/react": "16.9.11",
     "@types/react-dom": "16.9.0",
-    "@types/react-redux": "^7.1.2",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^4.3.5",
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
-    "materialize-css": "^1.0.0-rc.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.0.1",
+    "materialize-css": "^1.0.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "redux-observable": "^1.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-observable": "^1.2.0",
+    "redux-thunk": "^2.3.0",
+    "rxjs": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,7 +47,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.2",
-    "tslint": "^5.19.0",
-    "typescript": "^3.5.3"
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2"
   }
 }
