--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.9.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^4.3.5",
+    "@types/react-router-redux": "^5.0.18",
     "@types/redux": "^3.6.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
@@ -19,6 +20,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-observable": "^1.2.0",
