--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-observable": "^1.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "0.0.20",
     "redux-thunk": "^2.3.0",
     "rxjs": "^6.5.3"
   },
