--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.2",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.0",
+    "@types/jest": "~24.0.23",
+    "@types/node": "~12.12.14",
+    "@types/react": "~16.9.13",
+    "@types/react-dom": "~16.9.4",
     "@types/react-redux": "^7.1.5",
-    "@types/react-router-dom": "^4.3.5",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-router-redux": "^5.0.18",
     "@types/redux": "^3.6.0",
     "admin-lte": "^3.0.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "connected-react-router": "^6.5.2",
-    "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
+    "connected-react-router": "~6.6.1",
+    "react": "~16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "~16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
